--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;1,700&family=Roboto:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;1,700&family=Roboto:wght@100&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   font-size: 100%;
-  background:#f8efed;
+  background: #f8efed;
 }
 
 .cabecalho {
@@ -22,34 +21,38 @@ body {
   padding: 12px;
 }
 
-.cabecalho-logo{
+.cabecalho-logo {
   height: 68px;
 }
 
-.cabecalho-menu{
+.cabecalho-menu {
   display: flex;
   gap: 32px;
 }
 
-.cabecalho-menu-item{
-  font-family: 'Alegreya Sans', sans-serif;
-  color: #BF3FBF;
+.cabecalho-menu-item {
+  font-family: "Alegreya Sans", sans-serif;
+  color: #bf3fbf;
   font-size: 24px;
 }
 
-.conteudo{
-  margin-bottom: 48px;
+.conteudo {
+  /* margin-bottom: 48px; */
   border-top: 0.4px solid #a056c9;
 }
 
-
-
 .conteudo-principal {
-  background: #4568DC;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
+  background: #4568dc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   display: flex;
   flex-direction: row;
@@ -58,35 +61,33 @@ background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, F
   width: 100%;
   height: 650px;
 
-  font-family: 'Alegreya Sans', sans-serif;
+  font-family: "Alegreya Sans", sans-serif;
 }
 
-.conteudo-principal-imagem{
+.conteudo-principal-imagem {
   height: 650px;
   width: 50%;
   padding-left: 100px;
 }
 
-.conteudo-principal-escrito{
-  font-family: 'Roboto', sans-serif;
+.conteudo-principal-escrito {
+  font-family: "Roboto", sans-serif;
   font-size: 35px;
   font-weight: 1px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   padding-right: 350px;
-  
 }
 
-.conteudo-principal-escrito-subtitulo{
- color: #840887;
- font-size: 35px;
- padding-bottom: 15px;
- padding-top: 10px;
- 
+.conteudo-principal-escrito-subtitulo {
+  color: #840887;
+  font-size: 35px;
+  padding-bottom: 15px;
+  padding-top: 10px;
 }
 
-button{
-  background-color: #79096a; 
+button {
+  background-color: #79096a;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -102,38 +103,34 @@ button{
   transition-duration: 0.4s;
 }
 
-.conteudo-principal-escrito-botao{
-  
+.conteudo-principal-escrito-botao {
 }
 
 .conteudo-principal-escrito-botao:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-  
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .texto-botao {
   color: white;
-  
 }
 
 .conteudo-secundario {
   height: 600px;
-  
 }
 
-.conteudo-secundario-titulo{
-  font-family: 'Alegreya Sans', sans-serif;
+.conteudo-secundario-titulo {
+  font-family: "Alegreya Sans", sans-serif;
   color: #a056c9;
   font-size: 30px;
-   text-align: center;
-   padding-top: 60px;
-   padding-bottom: 10px;
-   
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 10px;
 }
 
-.conteudo-secundario-titulo-subtitulo{
-  font-family: 'Alegreya Sans', sans-serif;
-  color: #9400D3;
+.conteudo-secundario-titulo-subtitulo {
+  font-family: "Alegreya Sans", sans-serif;
+  color: #9400d3;
   font-size: 50px;
   text-align: center;
   font-weight: 30px;
@@ -147,32 +144,39 @@ button{
   padding-top: 80px;
 }
 
-.alzheimer{
+.alzheimer {
   /* padding-right: 100px; */
 }
 
-.parkinson{
+.parkinson {
   padding-left: 250px;
 }
 
-.enxaqueca{
+.enxaqueca {
   padding-left: 250px;
 }
 
-.icone-titulo{
-  font-family: 'Alegreya Sans', sans-serif;
+.icone-titulo {
+  font-family: "Alegreya Sans", sans-serif;
   color: #840887;
   font-size: 30px;
   /* align-items: center; */
   text-align: center;
   padding-top: 10px;
-  
 }
 
 .conteudo-agendar {
-  background: #4568DC;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #4568dc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   height: 200px;
   display: flex;
   flex-direction: column;
@@ -180,27 +184,126 @@ button{
   justify-content: center;
 }
 
-.conteudo-agendar-texto{
-  
-  font-family: 'Alegreya Sans', sans-serif;
+.conteudo-agendar-texto {
+  font-family: "Alegreya Sans", sans-serif;
   color: #840887;
   font-size: 30px;
-   text-align: center;
-   padding-bottom: 10px;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 .conteudo-sobre {
-  height: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 600px;
+}
+
+.conteudo-sobre-texto {
+  padding-right: 80px;
+}
+
+.conteudo-sobre-titulo {
+  text-transform: uppercase;
+  font-family: "Alegreya Sans", sans-serif;
+  color: #840887;
+  font-size: 25px;
+}
+
+.conteudo-sobre-nome {
+  font-family: "Alegreya Sans", sans-serif;
+  color: #9400d3;
+  font-size: 60px;
+}
+
+.conteudo-sobre-subitulo {
+  font-family: "Alegreya Sans", sans-serif;
+  color: #840887;
+  font-size: 25px;
+
+  padding-bottom: 20px;
+}
+
+.conteudo-sobre-lista {
+  padding-left: 30px;
+}
+
+.conteudo-lista {
+  font-family: "Alegreya Sans", sans-serif;
+  color: #840887;
+  font-size: 24px;
+}
+
+.conteudo-sobre-imagem {
+  height: 80%;
+  border-radius: 40px;
 }
 
 .rodape {
-  background: #4568DC;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  
+  background: #4568dc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.rodape-texto {
-  
+.conteudo-rodape {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: unset;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.rodape-logo {
+  height: 50%;
+  padding-left: 300px;
+  padding-right: 80px;
+}
+
+.text-footer {
+  display: flex;
+  flex-direction: column;
+  text-justify: auto;
+
+  font-family: "Alegreya Sans", sans-serif;
+  color: white;
+  font-size: 20px;
+}
+
+.copyright {
+  background: #4568dc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #b06ab3,
+    #4568dc
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+.copyright-text {
+  font-size: 20px;
+  color: white;
+}
+
+.link-mateus {
+  color: #fffff0;
 }
