--- a/style.css
+++ b/style.css
@@ -307,3 +307,28 @@ button {
 .link-mateus {
   color: #fffff0;
 }
+
+@media screen and (max-width: 730px) {
+  .cabecalho {
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 12px;
+  }
+
+  .conteudo-principal {
+    width: 110vw;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .conteudo-principal-imagem {
+    height: 69%;
+    width: 50%;
+    padding-left: 100px;
+  }
+}
