--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ button {
   color: white;
   padding: 15px 32px;
   border-radius: 15px;
-  width: 350px;
+  /* width: 350px; */
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -331,8 +331,9 @@ button {
 }
 
 @media screen and (max-width: 600px) {
-  #header {
-    width: 100%;
+  
+  body{
+    width: 100vw;
   }
 
   #btn-mobile {
