--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
@@ -405,6 +406,25 @@ button {
  #nav.active #hamburguer::after{
   transform: rotate(-135deg);
   top: -7px;
+ }
+
+ .conteudo-principal{
+  flex-direction: column;
+  align-items: center;
+  justify-content: none;
+  height: 80vh;
+ }
+
+ .conteudo-principal-imagem{
+  height: 60%;
+  width: 60%;
+  padding-left: 0;
+ }
+
+ .conteudo-principal-escrito{
+  font-size: 20px;
+
+  padding-right: 0;
  }
 
 
