--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ ul {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 12px;
 }
 
