--- a/style.css
+++ b/style.css
@@ -79,17 +79,17 @@ ul {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100vw;
-  height: 650px;
-
+  height: 75vh;
+  gap: 100px;
   font-family: "Alegreya Sans", sans-serif;
 }
 
 .conteudo-principal-imagem {
-  height: 650px;
-  width: 50%;
-  padding-left: 100px;
+  height: 75vh;
+  width: 45vw;
+  
 }
 
 .conteudo-principal-escrito {
@@ -98,7 +98,7 @@ ul {
   font-weight: 1px;
   text-align: center;
   color: #ffffff;
-  padding-right: 350px;
+  padding-right: 10%;
 }
 
 .conteudo-principal-escrito-subtitulo {
@@ -413,6 +413,7 @@ button {
   align-items: center;
   justify-content: none;
   height: 80vh;
+  gap: 20px;
  }
 
  .conteudo-principal-imagem{
@@ -427,9 +428,47 @@ button {
   padding-right: 0;
  }
 
+ .conteudo-secundario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90vh;
+}
+
+.conteudo-secundario-titulo{
+  padding-top: 20px;
+  font-size: 25px;
+}
+
+.conteudo-secundario-titulo-subtitulo{
+  padding-bottom: 15px;
+  font-size: 25px;
+}
 
   .conteudo-secundario-icones {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 0;
+  }
+
+  .alzheimer{
+    padding-bottom: 10px;
+  }
+
+  .parkinson {
+    padding-left: 0;
+    padding-bottom: 10px;
+    
+  }
+  
+  .enxaqueca {
+    padding-left: 0;
+  }
+
+  .icone-titulo{
+    font-size: 25px;
   }
 
   .conteudo-sobre {
