att: fotos novas

--- a/style.css
+++ b/style.css
@@ -27,14 +27,17 @@ ul {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 12px;
   overflow-y: hidden;
 
 }
 
+
+
 .cabecalho-logo {
-  height: 60px;
+  height: 15vh;
+
 }
 
 #nav {
@@ -90,7 +93,7 @@ ul {
 
 .conteudo-principal-imagem {
   height: 75vh;
-  width: 45vw;
+  width: 40vw;
   
 }
 
@@ -282,15 +285,16 @@ button {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: unset;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  justify-content: center;
+  padding-top: 5px;
+  padding-bottom: 15px;
 }
 
 .rodape-logo {
-  height: 50%;
-  padding-left: 300px;
-  padding-right: 80px;
+  height: 170px;
+  width: 170px;
+  /* padding-left: 20vw; */
+  /*  */
 }
 
 .text-footer {
